--- a/Project/pkr/templates/index.html
+++ b/Project/pkr/templates/index.html
@@ -15,6 +15,7 @@
 
 <body style="background-color: #F8F9F9;">
   <!--   Header -->
+  <h3 align="center">Nama : Asad Bahy Arkhab <br> Kelas : Cosmic</h3>
   <div class="d-flex justify-content-between align-items-center px-5 py-3">
     <div>
       <img src={{ url_for('static', filename="images/orbit.png" ) }} height="50" width="auto">
